--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,9 +61,9 @@ test-app_form:
     - sudo apt-get update
     - pip install -r requirements.txt
 
-# .do_dind:
-#   services:
-#     - docker:dind
+.do_dind:
+  services:
+    - docker:dind
 
 .do_docker_logging:
   before_script:
@@ -79,10 +79,8 @@ test-app_form:
 build-app:
   stage: build
   image: docker:latest
-  services:
-    - docker:dind
   extends: 
-    # - .do_dind
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
   script:
@@ -92,10 +90,8 @@ build-app:
 build-app_admin:
   stage: build
   image: docker:latest
-  services:
-    - docker:dind
   extends: 
-    # - .do_dind
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
   script:
@@ -105,10 +101,8 @@ build-app_admin:
 build-app_form:
   stage: build
   image: docker:latest
-  services:
-    - docker:dind
   extends: 
-    # - .do_dind
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
   script:
@@ -133,6 +127,7 @@ deploy-dev:
   stage: deploy-dev
   image: docker:latest
   extends: 
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
   variables:
@@ -160,6 +155,7 @@ deploy-prod:
   stage: deploy-prod
   image: docker:latest
   extends: 
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
   variables:
