--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,6 +133,7 @@ deploy-dev:
   variables:
     NAMESPACE: dev
     DOCKER_HOST: unix:///var/run/docker.sock
+    DOCKER_TLS_CERTDIR: "/certs"
     DOCKER_DRIVER: overlay2
   environment:
     name: $NAMESPACE-$CI_BUILD_REF_NAME
