--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -127,9 +127,11 @@ deploy-dev:
   stage: deploy-dev
   image: docker:latest
   extends: 
-    - .do_dind
     - .do_strategy
     - .do_docker_logging
+  services:
+  - name: docker:dind
+    command: --host=tcp://0.0.0.0:2375
   variables:
     NAMESPACE: dev
     DOCKER_HOST: unix:///var/run/docker.sock
@@ -145,6 +147,7 @@ deploy-dev:
       http://$IP_VM:$PORT_DEV_APP_ADMIN_DASH
     on_stop: stop-dev
   script:
+    - sudo usermod -aG docker gitlab-runner
     - echo "Vérification de docker-compose"
     - docker-compose --version
     - echo "Démarrage des services avec docker-compose"
@@ -153,6 +156,7 @@ deploy-dev:
     - echo "Affichage des logs de docker-compose"
     - docker-compose logs
     - echo "Liste des conteneurs Docker"
+    - docker info
     - docker ps
 
 deploy-prod:
