--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,7 +133,8 @@ deploy-dev:
       command: ["--host=tcp://0.0.0.0:2375"]
   variables:
     NAMESPACE: dev
-    DOCKER_HOST: unix:///var/run/docker.sock
+    # DOCKER_HOST: unix:///var/run/docker.sock 
+    DOCKER_HOST: tcp://docker:2375 
     DOCKER_TLS_CERTDIR: "/certs"
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ""
