--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -126,18 +126,19 @@ deploy-dev:
   stage: deploy-dev
   image: docker:latest
   extends: 
+    - .do_dind
     - .do_strategy
     - .do_docker_logging
-  services:
-    - name: docker:dind
-      command: ["--host=tcp://0.0.0.0:2375"]
+  # services:
+  #   - name: docker:dind
+  #     command: ["--host=tcp://0.0.0.0:2375"]
   variables:
     NAMESPACE: dev
     # DOCKER_HOST: unix:///var/run/docker.sock 
-    DOCKER_HOST: tcp://docker:2375 
-    DOCKER_TLS_CERTDIR: "/certs"
-    DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
+    # DOCKER_HOST: tcp://docker:2375 
+    # DOCKER_TLS_CERTDIR: "/certs"
+    # DOCKER_DRIVER: overlay2
+    # DOCKER_TLS_CERTDIR: ""
   environment:
     name: $NAMESPACE-$CI_BUILD_REF_NAME
     url: |
@@ -153,7 +154,8 @@ deploy-dev:
     - docker-compose --version
     - echo "Démarrage des services avec docker-compose"
     # - docker-compose -f docker-compose.yml up --pull always -d
-    - docker-compose -f docker-compose.yml up --pull always --verbose
+    # - docker-compose up --pull always -d
+    - docker-compose up --pull always
     - echo "Affichage des logs de docker-compose"
     - docker-compose logs
     - echo "Liste des conteneurs Docker"
