--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,7 +157,7 @@ deploy-dev:
     - echo "Démarrage des services avec docker-compose"
     # - docker-compose -f docker-compose.yml up --pull always -d
     # - docker-compose up --pull always -d
-    - docker-compose up --pull always
+    - docker-compose up
     - echo "Affichage des logs de docker-compose"
     - docker-compose logs
     - echo "Liste des conteneurs Docker"
