--- a/.env
+++ b/.env
@@ -11,8 +11,10 @@ API_KEY=api_key_dstairlines
 #-----------------------------------------------
 #Clés Guillaume :
 KEY_AS=1029af3b615d19eabb828a556e1a14b6
-KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
-KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
+# KEY_VISUALCROSSING=2Q5Q5GC6BTZEBEPQQMALNRTBP
+# KEY_VISUALCROSSING_2=P5EQ8RLEBUC7CZ9ZTN8WZG4AZ
+KEY_VISUALCROSSING=77Q6KTMF8HXHES6CCJW4UJRQT
+KEY_VISUALCROSSING_2=MAZSUKMJLGLXB8AZYSTZCNJFS
 CLIENT_ID_LH=xba2dh7y2xqabeamx2t7zcssx
 CLIENT_SECRET_LH=drAEmGMT7B
 #-----------------------------------------------
