--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,9 @@ stages:
 
 .do_strategy:
   before_script:
-    - umask 022
+    - find . -type f -exec chmod 644 {} \; # Permissions correctes pour les fichiers
+    - find . -type d -exec chmod 755 {} \; # Permissions correctes pour les dossiers
+    - chown -R gitlab-runner:gitlab-runner . # S'assurer que le runner possède les fichiers
   variables:
     GIT_STRATEGY: fetch
     GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/__pycache__/
