--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,8 @@ stages:
 
 .do_strategy:
   before_script:
+    - whoami  # Affiche l'utilisateur courant
+    - id  # Affiche l'UID et le GID de l'utilisateur
     - find . -type f -exec chmod 644 {} \; # Permissions correctes pour les fichiers
     - find . -type d -exec chmod 755 {} \; # Permissions correctes pour les dossiers
     - chown -R gitlab-runner:gitlab-runner . # S'assurer que le runner possède les fichiers
