--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,7 @@ services:
     depends_on:
       - mongodb
     volumes:
-      # - ./model:/app/model  # Volume partagé avec l'hôte
-      - /home/gitlab-runner/builds/t3_zoG4A7/0/dst-airlines_group/DST_AIRLINES/model:/app/model  # Volume partagé avec l'hôte
+      - ./model:/app/model  # Volume partagé avec l'hôte
     environment:
       - MONGO_URI=mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017/app_data?authSource=admin
       #?authSource=admin -> on précise que l'on s'authentifie sur la base admin, car mongo créer les utilisateurs dans admin par défaut
@@ -65,9 +64,9 @@ services:
       - "8051:8051"  # Port pour Dash
       - "5000:5000"  # Port pour flask
     volumes:
-      - /home/gitlab-runner/builds/t3_zoG4A7/0/dst-airlines_group/DST_AIRLINES/app_admin/scripts:/app/scripts
-      - /home/gitlab-runner/builds/t3_zoG4A7/0/dst-airlines_group/DST_AIRLINES/model:/app/model
-      - /home/gitlab-runner/builds/t3_zoG4A7/0/dst-airlines_group/DST_AIRLINES/data_test:/app/data_test
+      - ./app_admin/scripts:/app/scripts
+      - ./model:/app/model
+      - ./data_test:/app/data_test
     environment:
       - MONGO_URI=mongodb://${MONGO_ROOT_LOGIN}:${MONGO_ROOT_PASSWORD}@mongodb:27017/app_data?authSource=admin
       #?authSource=admin -> on précise que l'on s'authentifie sur la base admin, car mongo créer les utilisateurs dans admin par défaut
