--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ stages:
     - id  # Affiche l'UID et le GID de l'utilisateur
   variables:
     GIT_STRATEGY: fetch
-    GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/__pycache__/
+    GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/__pycache__/ -e app_admin/scripts/.ipynb_checkpoints/
 
 test-app:
   stage: test
