--- a/Dockerfile.app_form
+++ b/Dockerfile.app_form
@@ -15,7 +15,7 @@ RUN pip install --no-cache-dir --timeout=100 -r requirements.txt
 
 # Copie les répertoires spécifiques
 COPY data_test /app/data_test
-COPY functions /app/functions
+# COPY functions /app/functions
 COPY /app_form/scripts /app/scripts
 COPY /app_form/templates /app/templates
 COPY /app_form/static /app/static
