--- a/app_dash/requirements.txt
+++ b/app_dash/requirements.txt
@@ -2,7 +2,7 @@ dash==2.11.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-plotly==5.16.1
-pandas==2.1.1
-pymongo==4.5.1
+plotly
+pandas==2.0.3
+pymongo==4.10.1
 # numpy==1.23.0
