ajou test unitaires test_app

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,8 @@ test-app:
     - sudo pip install --upgrade pip
     - sudo apt-get update
     - pip install -r requirements.txt
+    - pip install pytest
+    - python3 -m pytest tests/
     # - python3 -m unittest discover tests/
     # - python -m unittest discover -s app/tests -p "*.py"
 
