--- a/Dockerfile.app_admin
+++ b/Dockerfile.app_admin
@@ -29,6 +29,7 @@ COPY data_test /app/data_test
 # COPY functions /app/functions
 COPY /app_admin/scripts /app/scripts
 COPY /app_admin/templates /app/templates
+COPY /app_admin/tests /app/tests
 # COPY /model /app/model
 
 # Copie les fichiers spécifiques
