ajout variable environnement job test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,8 +46,13 @@ test-app:
     MONGO_INITDB_ROOT_USERNAME: root
     MONGO_INITDB_ROOT_PASSWORD: password
     MONGO_URI: mongodb://root:password@mongodb:27017/app_data?authSource=admin
+    FLASK_ADMIN_LOGIN: admin
+    FLASK_ADMIN_PASSWORD: admin
+    FLASK_USER_LOGIN: dstairlines
+    FLASK_USER_PASSWORD: dstairlines
     API_KEY: api_key_dstairlines
   script:
+    - nc -zv mongodb 27017 || exit 1
     - python3 init_db.py
     - cd app/
     - sudo pip install --upgrade pip
