--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ test-app:
     - name: mongo:4.4
       alias: mongodb
   variables:
-    MONGO_HOST: mongodb
+    MONGO_HOST: IP_VM
     MONGO_PORT: 27017
     MONGO_ROOT_LOGIN: root
     MONGO_ROOT_PASSWORD: password
